--- a/packages/oc-spec-site/index.html
+++ b/packages/oc-spec-site/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OpenCollection Specification</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css">
+    <!-- Using custom Prism theme defined in App.css -->
   </head>
   <body>
     <div id="root"></div>
